# motorized-equatorial-mount

./: CMakeLists.txt  ControlVariables.h  main.c  main.cpp  readme.md  test.html
3dPrints/: BearingBottom-MEM-MK2.stl  Gear32-MEM-MK2.stl  Gear8-24-MEM-MK2.stl  GearCaseTop-MEM-MK2.stl  GearSpacer20mm-MEM-MK2.stl  GearSpacer26mm-MEM-MK2.stl  GearSpacer8mm-MEM-MK2.stl  MainCaseBottom-MEM-MK2.stl  MainCaseTop-MEM-MK2.stl
dhcpserver/: dhcpserver.cpp
dnsserver/: dnsserver.cpp
misc/: Maths.txt
misc/3dPrints/: AxisMount-MEM-MK2.stl  BearingTop-MEM-MK2.stl  Counterweight-MEM-MK2.stl  Gear8-28-MEM-MK2.stl  Gear8-MEM-MK2.stl  GearCaseBottom-MEM-MK2.stl  GearSpacer14mm-MEM-MK2.stl
release/: motorized_equatorial_mount.uf2
server/: server.c  server.cpp  server.h  webpage.c  webpage.cpp  webpage.h
server/ControlComponents/: BlinkSpeedControlComponent.cpp  BlinkingControlComponent.cpp  LedControlComponent.cpp  MotorModeControlComponent.cpp  MotorSpeedControlComponent.cpp
